--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loom",
-  "version": "2.0.0",
+  "version": "3.0.0-beta.1",
   "description": "Weave your wefts betwixt the warps of loom generators and scaffolds.",
   "main": "loom.js",
   "scripts": {
