--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Weave your wefts betwixt the warps of loom generators and scaffolds.",
   "main": "loom.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --require should --reporter dot --ui bdd $(find test -name \"*.spec.js\")"
+    "test": "node_modules/.bin/mocha --require should --reporter dot --ui bdd $(find test -name \"*.spec.js\")",
+    "watch": "node_modules/.bin/mocha --watch --require should --reporter dot --ui bdd $(find test -name \"*.spec.js\")"
   },
   "bin": {
     "generate": "./bin/generate"
